# Myster-us-Adventures

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Mysterus_adventure  README.md  game.c  game.h  gameplay.c  init.c  main  main.c  menu.c  playerturn.c  scoremanager.c  scores.txt  test  test.c  usual.c
engine/: engine.c  engine.h
include/: game.h  gameplay.h  header.h  init.h  macro.h  menu.h  scoremanager.h  struct.h  tuto.h  usual.h
menus/: tuto.c
